--- a/provisioning/helloworld/Dockerfile
+++ b/provisioning/helloworld/Dockerfile
@@ -1,12 +1,13 @@
-FROM ubuntu:latest
+FROM gliderlabs/alpine:3.3
 
-RUN apt-get update
-RUN apt-get install -y nginx
+RUN addgroup -g 1000 -S www-data \
+ && adduser -u 1000 -D -S -G www-data www-data
+
+RUN apk-install nginx
 ADD nginx.conf /etc/nginx/nginx.conf
 
 RUN mkdir -p /var/www/site
 ADD index.html /var/www/site/index.html
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
